fixed btn on iOS

--- a/style/buttons.css
+++ b/style/buttons.css
@@ -9,6 +9,7 @@
   overflow: hidden;
   cursor: pointer;
   letter-spacing: 2px;
+  background-color: transparent;
 }
 
 .btn .text {
